--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PokeApi</title>
     <link rel="stylesheet" href="assets/style.css" />
+    <link rel="shortcut icon" href="./assets/img/pokeball.png">
   </head>
   <body>
     <section>
